添加解码成yuv的demo

--- a/demo/cpp/mscv2015/t_stream.vcxproj
+++ b/demo/cpp/mscv2015/t_stream.vcxproj
@@ -155,7 +155,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\stream\main.c" />
     <ClCompile Include="..\stream\t_stream.c" />
+    <ClCompile Include="..\stream\t_stream_dec.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
